exports[`test should mount an open modal 1`] = `
<ModalOverlay
  classNameOverlay={null}>
  <div
    className={null}
    tabIndex="-1" />
</ModalOverlay>
`;

exports[`test should render an open modal 1`] = `
<div
  tabindex="-1" />
`;

exports[`test should shallow an open modal 1`] = `
<div
  className={null}
  tabIndex="-1" />
`;
